# Multilayer-perceptron

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codestyle.yaml
multilayer_perceptron/: ;  __init__.py  predict.py  separate.py  train.py
multilayer_perceptron/data_engineering/: __init__.py  data_preparation.py  parse.py  play.py  separate.py
multilayer_perceptron/layer/: DenseLayer.py
multilayer_perceptron/model/: algorithm.py  metrics.py  mlp.py
tests/: __init__.py
